[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/images/pixel.svg" type="Texture" id=2]
[ext_resource path="res://src/entities/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/images/LightMask.webp" type="Texture" id=5]
[ext_resource path="res://src/levels/FirstLevel.gd" type="Script" id=6]
[ext_resource path="res://src/entities/Pellet.tscn" type="PackedScene" id=7]
[ext_resource path="res://res/images/BeamLightMask.jpg" type="Texture" id=8]
[ext_resource path="res://src/tools/Fade.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4498.5, 26 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 299.5, 110 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 360.5, 208 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 159.5, 101 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 99, 25 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 399, 50 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 400, 25 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 159.5, 250 )

[node name="FirstLevel" instance=ExtResource( 1 )]
script = ExtResource( 6 )
SCORE_PREFIX = ""

[node name="EnemyTrigger" type="Position2D" parent="DialogHandler" index="0"]
position = Vector2( 3138, 383 )
scale = Vector2( 0.1, 1 )
__meta__ = {
"_gizmo_extents_": 719.2
}

[node name="Level1Trigger" type="Position2D" parent="DialogHandler" index="1"]
position = Vector2( 8250, 244 )
scale = Vector2( 0.1, 1 )
__meta__ = {
"_gizmo_extents_": 719.2
}

[node name="Objects" type="Node2D" parent="." index="2"]

[node name="Ground" type="StaticBody2D" parent="Objects" index="0"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 496, 590 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Ground" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 3967, -2 )
scale = Vector2( 9002, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Ground" index="1"]
position = Vector2( 3966.5, -1 )
shape = SubResource( 3 )

[node name="Terrain" type="StaticBody2D" parent="Objects" index="1"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1050, 801 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 642, -311.25 )
scale = Vector2( 721, 215.5 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain" index="1"]
position = Vector2( 582.5, -309 )
shape = SubResource( 4 )

[node name="Terrain2" type="StaticBody2D" parent="Objects" index="2"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1050, 801 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain2" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 1227, -407.625 )
scale = Vector2( 721, 418.75 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain2" index="1"]
position = Vector2( 1226.5, -409 )
shape = SubResource( 5 )

[node name="Terrain3" type="StaticBody2D" parent="Objects" index="3"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3012, 465 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain3" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 198.688 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain3" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 6 )

[node name="Terrain4" type="StaticBody2D" parent="Objects" index="4"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 4302, 465 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain4" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 198.688 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain4" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 6 )

[node name="Terrain5" type="StaticBody2D" parent="Objects" index="5"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3931, 167 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain5" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain5" index="1"]
shape = SubResource( 7 )

[node name="Terrain6" type="StaticBody2D" parent="Objects" index="6"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3598, -29 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain6" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain6" index="1"]
shape = SubResource( 7 )

[node name="Terrain7" type="StaticBody2D" parent="Objects" index="7"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3295, -200 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain7" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain7" index="1"]
shape = SubResource( 7 )

[node name="Terrain8" type="StaticBody2D" parent="Objects" index="8"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3694, -410 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain8" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain8" index="1"]
shape = SubResource( 7 )

[node name="Terrain9" type="StaticBody2D" parent="Objects" index="9"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3363, -640 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain9" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain9" index="1"]
shape = SubResource( 7 )

[node name="Terrain10" type="StaticBody2D" parent="Objects" index="10"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 2868, -758 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain10" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain10" index="1"]
shape = SubResource( 7 )

[node name="Terrain11" type="StaticBody2D" parent="Objects" index="11"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 2420, -984 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain11" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain11" index="1"]
shape = SubResource( 7 )

[node name="Terrain12" type="StaticBody2D" parent="Objects" index="12"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1810, -1186 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain12" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 800, 100 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain12" index="1"]
shape = SubResource( 8 )

[node name="Terrain13" type="StaticBody2D" parent="Objects" index="13"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 4843, 191 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain13" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain13" index="1"]
shape = SubResource( 7 )

[node name="Terrain16" type="StaticBody2D" parent="Objects" index="14"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 6550, -27 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain16" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 200, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain16" index="1"]
shape = SubResource( 7 )

[node name="Terrain14" type="StaticBody2D" parent="Objects" index="15"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 5660, 33 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain14" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 800, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain14" index="1"]
shape = SubResource( 9 )

[node name="Terrain15" type="StaticBody2D" parent="Objects" index="16"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 7174, 319 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain15" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 500 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain15" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 10 )

[node name="Entities" type="Node2D" parent="." index="3"]

[node name="Player" parent="Entities" index="0" instance=ExtResource( 3 )]
position = Vector2( 779, 297 )
BOUNDS = Vector2( 0, 8294 )

[node name="Pellets" type="Node2D" parent="Entities" index="1"]

[node name="0" parent="Entities/Pellets" index="0" instance=ExtResource( 7 )]
position = Vector2( 51, 514 )
z_index = 5
weight = 0.1

[node name="1" parent="Entities/Pellets" index="1" instance=ExtResource( 7 )]
position = Vector2( 1267, 448 )
z_index = 5
weight = 0.1

[node name="2" parent="Entities/Pellets" index="2" instance=ExtResource( 7 )]
position = Vector2( 1164, 421 )
z_index = 5
weight = 0.1

[node name="3" parent="Entities/Pellets" index="3" instance=ExtResource( 7 )]
position = Vector2( 1529, 314 )
z_index = 5
weight = 0.1

[node name="4" parent="Entities/Pellets" index="4" instance=ExtResource( 7 )]
position = Vector2( 1634, 344 )
z_index = 5
weight = 0.1

[node name="5" parent="Entities/Pellets" index="5" instance=ExtResource( 7 )]
position = Vector2( 1771, 266 )
z_index = 5
weight = 0.1

[node name="6" parent="Entities/Pellets" index="6" instance=ExtResource( 7 )]
position = Vector2( 1150, 497 )
z_index = 5
weight = 0.1

[node name="7" parent="Entities/Pellets" index="7" instance=ExtResource( 7 )]
position = Vector2( 143, 517 )
z_index = 5
weight = 0.1

[node name="8" parent="Entities/Pellets" index="8" instance=ExtResource( 7 )]
position = Vector2( 111, 475 )
z_index = 5
weight = 0.1

[node name="9" parent="Entities/Pellets" index="9" instance=ExtResource( 7 )]
position = Vector2( 2046, 118 )
z_index = 5
weight = 0.1

[node name="10" parent="Entities/Pellets" index="10" instance=ExtResource( 7 )]
position = Vector2( 2320, 146 )
z_index = 5
weight = 0.1

[node name="11" parent="Entities/Pellets" index="11" instance=ExtResource( 7 )]
position = Vector2( 2679, 517 )
z_index = 5
weight = 0.1

[node name="12" parent="Entities/Pellets" index="12" instance=ExtResource( 7 )]
position = Vector2( 3060, 341 )
z_index = 5
weight = 0.1

[node name="13" parent="Entities/Pellets" index="13" instance=ExtResource( 7 )]
position = Vector2( 2079, -1282 )
z_index = 5
weight = 0.1

[node name="14" parent="Entities/Pellets" index="14" instance=ExtResource( 7 )]
position = Vector2( 2020, -1337 )
z_index = 5
weight = 0.1

[node name="15" parent="Entities/Pellets" index="15" instance=ExtResource( 7 )]
position = Vector2( 1970, -1280 )
z_index = 5
weight = 0.1

[node name="16" parent="Entities/Pellets" index="16" instance=ExtResource( 7 )]
position = Vector2( 1822, -1348 )
z_index = 5
weight = 0.1

[node name="17" parent="Entities/Pellets" index="17" instance=ExtResource( 7 )]
position = Vector2( 1845, -1279 )
z_index = 5
weight = 0.1

[node name="18" parent="Entities/Pellets" index="18" instance=ExtResource( 7 )]
position = Vector2( 1755, -1415 )
z_index = 5
weight = 0.1

[node name="19" parent="Entities/Pellets" index="19" instance=ExtResource( 7 )]
position = Vector2( 1890, -1388 )
z_index = 5
weight = 0.1

[node name="20" parent="Entities/Pellets" index="20" instance=ExtResource( 7 )]
position = Vector2( 1719, -1306 )
z_index = 5
weight = 0.1

[node name="21" parent="Entities/Pellets" index="21" instance=ExtResource( 7 )]
position = Vector2( 1640, -1371 )
z_index = 5
weight = 0.1

[node name="22" parent="Entities/Pellets" index="22" instance=ExtResource( 7 )]
position = Vector2( 1611, -1260 )
z_index = 5
weight = 0.1

[node name="23" parent="Entities/Pellets" index="23" instance=ExtResource( 7 )]
position = Vector2( 1558, -1305 )
z_index = 5
weight = 0.1

[node name="24" parent="Entities/Pellets" index="24" instance=ExtResource( 7 )]
position = Vector2( 1468, -1271 )
z_index = 5
weight = 0.1

[node name="25" parent="Entities/Pellets" index="25" instance=ExtResource( 7 )]
position = Vector2( 5439, 514 )
z_index = 5
weight = 0.1

[node name="26" parent="Entities/Pellets" index="26" instance=ExtResource( 7 )]
position = Vector2( 5619, 458 )
z_index = 5
weight = 0.1

[node name="27" parent="Entities/Pellets" index="27" instance=ExtResource( 7 )]
position = Vector2( 5707, 512 )
z_index = 5
weight = 0.1

[node name="28" parent="Entities/Pellets" index="28" instance=ExtResource( 7 )]
position = Vector2( 6293, 516 )
z_index = 5
weight = 0.1

[node name="29" parent="Entities/Pellets" index="29" instance=ExtResource( 7 )]
position = Vector2( 6513, 464 )
z_index = 5
weight = 0.1

[node name="30" parent="Entities/Pellets" index="30" instance=ExtResource( 7 )]
position = Vector2( 6878, 495 )
z_index = 5
weight = 0.1

[node name="31" parent="Entities/Pellets" index="31" instance=ExtResource( 7 )]
position = Vector2( 4885, 514 )
z_index = 5
weight = 0.1

[node name="32" parent="Entities/Pellets" index="32" instance=ExtResource( 7 )]
position = Vector2( 5896, 483 )
z_index = 5
weight = 0.1

[node name="33" parent="Entities/Pellets" index="33" instance=ExtResource( 7 )]
position = Vector2( 5357, -36 )
z_index = 5
weight = 0.1

[node name="34" parent="Entities/Pellets" index="34" instance=ExtResource( 7 )]
position = Vector2( 5489, -90 )
z_index = 5
weight = 0.1

[node name="35" parent="Entities/Pellets" index="35" instance=ExtResource( 7 )]
position = Vector2( 5919, -43 )
z_index = 5
weight = 0.1

[node name="36" parent="Entities/Pellets" index="36" instance=ExtResource( 7 )]
position = Vector2( 7142, 20 )
z_index = 5
weight = 0.1

[node name="37" parent="Entities/Pellets" index="37" instance=ExtResource( 7 )]
position = Vector2( 7252, -28 )
z_index = 5
weight = 0.1

[node name="38" parent="Entities/Pellets" index="38" instance=ExtResource( 7 )]
position = Vector2( 7449, 505 )
z_index = 5
weight = 0.1

[node name="39" parent="Entities/Pellets" index="39" instance=ExtResource( 7 )]
position = Vector2( 7787, 427 )
z_index = 5
weight = 0.1

[node name="Enemies" type="Node2D" parent="Entities" index="2"]

[node name="0" parent="Entities/Enemies" index="0" instance=ExtResource( 4 )]
position = Vector2( 3714, 500 )
BOUNDS = Vector2( 3404, 4104 )

[node name="1" parent="Entities/Enemies" index="1" instance=ExtResource( 4 )]
position = Vector2( 5088, 494 )
BOUNDS = Vector2( 4499, 6977 )

[node name="2" parent="Entities/Enemies" index="2" instance=ExtResource( 4 )]
position = Vector2( 6125, 499 )
BOUNDS = Vector2( 4499, 6977 )

[node name="3" parent="Entities/Enemies" index="3" instance=ExtResource( 4 )]
position = Vector2( 6820, 497 )
BOUNDS = Vector2( 4499, 6977 )

[node name="4" parent="Entities/Enemies" index="4" instance=ExtResource( 4 )]
position = Vector2( 5643, -45 )
BOUNDS = Vector2( 5318, 6007 )

[node name="Lights" type="Node2D" parent="." index="4"]

[node name="0" type="Light2D" parent="Lights" index="0"]
position = Vector2( 20, 30 )
texture = ExtResource( 5 )
texture_scale = 3.05
range_layer_min = -10

[node name="1" type="Light2D" parent="Lights" index="1"]
position = Vector2( 8481, 239 )
rotation = 1.12658
scale = Vector2( 0.689772, 0.807813 )
texture = ExtResource( 8 )
texture_scale = 3.05
range_layer_min = -10

[node name="Fades" type="Node2D" parent="." index="5"]

[node name="First" parent="Fades" index="0" instance=ExtResource( 9 )]
position = Vector2( 943, 249 )
scale = Vector2( 2000, 800 )

[node name="Second" parent="Fades" index="1" instance=ExtResource( 9 )]
position = Vector2( 8220, 298 )
scale = Vector2( 1500, 800 )

[connection signal="dialog_playing" from="DialogHandler" to="." method="_on_DialogHandler_dialog_playing"]
[connection signal="dialog_playing" from="DialogHandler" to="Entities/Player" method="_on_DialogHandler_dialog_playing"]
[connection signal="modifyBackgroundColor" from="Entities/Player" to="Background" method="_on_Player_modifyBackgroundColor"]
[connection signal="playDialog" from="Entities/Player" to="DialogHandler" method="playDialogOption"]
[connection signal="finished" from="Fades/First" to="." method="_on_Fade_First_finished"]
[connection signal="finished" from="Fades/Second" to="." method="_on_Fade_Second_finished"]
